Kubernetes/media/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: prowlarr
  name: prowlarr
  namespace: media
spec:
  selector:
    matchLabels:
      io.kompose.service: prowlarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: prowlarr
    spec:
      containers:
        - env:
            - name: TZ
              value: Europe/Warsaw
          image: linuxserver/prowlarr:2.1.5
          name: prowlarr
          ports:
            - containerPort: 9696
          volumeMounts:
            - mountPath: /config
              name: prowlarr-data
      restartPolicy: Always
      volumes:
        - name: arr-config
          configMap:
            name: arr-config
        - name: prowlarr-data
          persistentVolumeClaim:
            claimName: prowlarr-data
