Kubernetes/media/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: prowlarr
  name: prowlarr
  namespace: media
spec:
  ports:
    - port: 9696
  selector:
    io.kompose.service: prowlarr
