Kubernetes/media/prowlarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostRegexp(`^prowlarr\.(.+)`)
      kind: Rule
      observability:
        accessLogs: true
      services:
        - name: prowlarr
          port: 9696
